frontend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASC
    HELP
    IS
    LOAD
    NOT
    VIEW

Grammar

Rule 0     S' -> start
Rule 1     start -> command ;
Rule 2     command -> ddl
Rule 3     command -> dml
Rule 4     command -> utility
Rule 5     command -> nothing
Rule 6     ddl -> createtable
Rule 7     ddl -> createindex
Rule 8     ddl -> droptable
Rule 9     ddl -> dropindex
Rule 10    ddl -> showtables
Rule 11    ddl -> altertable
Rule 12    ddl -> createuser
Rule 13    ddl -> grantuser
Rule 14    ddl -> revokeuser
Rule 15    dml -> query
Rule 16    dml -> insert
Rule 17    dml -> delete
Rule 18    dml -> update
Rule 19    utility -> exit
Rule 20    utility -> print
Rule 21    utility -> desc
Rule 22    showtables -> SHOW TABLES
Rule 23    createuser -> CREATE USER ID PASSWORD STRING
Rule 24    grantuser -> GRANT power_list ON non_mrelation_list TO non_mrelation_list
Rule 25    revokeuser -> REVOKE power_list ON non_mrelation_list FROM non_mrelation_list
Rule 26    power_list -> power_list , power_type
Rule 27    power_list -> power_type
Rule 28    power_type -> SELECT
Rule 29    power_type -> UPDATE
Rule 30    power_type -> INSERT
Rule 31    power_type -> DELETE
Rule 32    power_type -> PRINT
Rule 33    power_type -> ALL
Rule 34    power_type -> DESC
Rule 35    altertable -> ALTER TABLE ID ADD attrtype
Rule 36    altertable -> ALTER TABLE ID DROP non_mrelation_list
Rule 37    createtable -> CREATE TABLE ID ( non_mattrtype_list )
Rule 38    createindex -> CREATE INDEX ID ( ID )
Rule 39    droptable -> DROP TABLE ID
Rule 40    dropindex -> DROP INDEX ID ( ID )
Rule 41    print -> PRINT ID
Rule 42    desc -> DESC ID
Rule 43    exit -> EXIT
Rule 44    query -> SELECT non_mselect_clause FROM non_mrelation_list opwhere_clause
Rule 45    insert -> INSERT INTO ID VALUES inservalue_list
Rule 46    inservalue_list -> ( non_mvalue_list ) , inservalue_list
Rule 47    inservalue_list -> ( non_mvalue_list )
Rule 48    delete -> DELETE FROM ID opwhere_clause
Rule 49    update -> UPDATE ID SET relattr EQ relattr_or_value opwhere_clause
Rule 50    non_mattrtype_list -> attrtype , non_mattrtype_list
Rule 51    non_mattrtype_list -> attrtype
Rule 52    attrtype -> ID type
Rule 53    attrtype -> ID type ( NUMBER )
Rule 54    attrtype -> PRIMARY KEY ( ID )
Rule 55    type -> INT
Rule 56    type -> CHAR
Rule 57    non_mselect_clause -> non_mrelattr_list
Rule 58    non_mselect_clause -> *
Rule 59    non_mrelattr_list -> relattr , non_mrelattr_list
Rule 60    non_mrelattr_list -> relattr
Rule 61    relattr -> ID . ID
Rule 62    relattr -> ID
Rule 63    non_mrelation_list -> relation , non_mrelation_list
Rule 64    non_mrelation_list -> relation
Rule 65    relation -> ID
Rule 66    opwhere_clause -> WHERE non_mcond_list
Rule 67    opwhere_clause -> nothing
Rule 68    non_mcond_list -> non_mcond_list AND non_mcond_list
Rule 69    non_mcond_list -> non_mcond_list OR non_mcond_list
Rule 70    non_mcond_list -> ( non_mcond_list )
Rule 71    non_mcond_list -> condition
Rule 72    condition -> relattr op relattr_or_value
Rule 73    condition -> relattr EQ null_value
Rule 74    condition -> relattr NE null_value
Rule 75    relattr_or_value -> relattr
Rule 76    relattr_or_value -> value
Rule 77    non_mvalue_list -> value , non_mvalue_list
Rule 78    non_mvalue_list -> value
Rule 79    non_mvalue_list -> null_value , non_mvalue_list
Rule 80    non_mvalue_list -> null_value
Rule 81    value -> STRING
Rule 82    value -> NUMBER
Rule 83    null_value -> NULL
Rule 84    op -> LT
Rule 85    op -> LE
Rule 86    op -> GT
Rule 87    op -> GE
Rule 88    op -> EQ
Rule 89    op -> NE
Rule 90    nothing -> <empty>

Terminals, with rules where they appear

(                    : 37 38 40 46 47 53 54 70
)                    : 37 38 40 46 47 53 54 70
*                    : 58
,                    : 26 46 50 59 63 77 79
.                    : 61
;                    : 1
ADD                  : 35
ALL                  : 33
ALTER                : 35 36
AND                  : 68
ASC                  : 
CHAR                 : 56
CREATE               : 23 37 38
DELETE               : 31 48
DESC                 : 34 42
DROP                 : 36 39 40
EQ                   : 49 73 88
EXIT                 : 43
FROM                 : 25 44 48
GE                   : 87
GRANT                : 24
GT                   : 86
HELP                 : 
ID                   : 23 35 36 37 38 38 39 40 40 41 42 45 48 49 52 53 54 61 61 62 65
INDEX                : 38 40
INSERT               : 30 45
INT                  : 55
INTO                 : 45
IS                   : 
KEY                  : 54
LE                   : 85
LOAD                 : 
LT                   : 84
NE                   : 74 89
NOT                  : 
NULL                 : 83
NUMBER               : 53 82
ON                   : 24 25
OR                   : 69
PASSWORD             : 23
PRIMARY              : 54
PRINT                : 32 41
REVOKE               : 25
SELECT               : 28 44
SET                  : 49
SHOW                 : 22
STRING               : 23 81
TABLE                : 35 36 37 39
TABLES               : 22
TO                   : 24
UPDATE               : 29 49
USER                 : 23
VALUES               : 45
VIEW                 : 
WHERE                : 66
error                : 

Nonterminals, with rules where they appear

altertable           : 11
attrtype             : 35 50 51
command              : 1
condition            : 71
createindex          : 7
createtable          : 6
createuser           : 12
ddl                  : 2
delete               : 17
desc                 : 21
dml                  : 3
dropindex            : 9
droptable            : 8
exit                 : 19
grantuser            : 13
insert               : 16
inservalue_list      : 45 46
non_mattrtype_list   : 37 50
non_mcond_list       : 66 68 68 69 69 70
non_mrelation_list   : 24 24 25 25 36 44 63
non_mrelattr_list    : 57 59
non_mselect_clause   : 44
non_mvalue_list      : 46 47 77 79
nothing              : 5 67
null_value           : 73 74 79 80
op                   : 72
opwhere_clause       : 44 48 49
power_list           : 24 25 26
power_type           : 26 27
print                : 20
query                : 15
relation             : 63 64
relattr              : 49 59 60 72 73 74 75
relattr_or_value     : 49 72
revokeuser           : 14
showtables           : 10
start                : 0
type                 : 52 53
update               : 18
utility              : 4
value                : 76 77 78

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . command ;
    (2) command -> . ddl
    (3) command -> . dml
    (4) command -> . utility
    (5) command -> . nothing
    (6) ddl -> . createtable
    (7) ddl -> . createindex
    (8) ddl -> . droptable
    (9) ddl -> . dropindex
    (10) ddl -> . showtables
    (11) ddl -> . altertable
    (12) ddl -> . createuser
    (13) ddl -> . grantuser
    (14) ddl -> . revokeuser
    (15) dml -> . query
    (16) dml -> . insert
    (17) dml -> . delete
    (18) dml -> . update
    (19) utility -> . exit
    (20) utility -> . print
    (21) utility -> . desc
    (90) nothing -> .
    (37) createtable -> . CREATE TABLE ID ( non_mattrtype_list )
    (38) createindex -> . CREATE INDEX ID ( ID )
    (39) droptable -> . DROP TABLE ID
    (40) dropindex -> . DROP INDEX ID ( ID )
    (22) showtables -> . SHOW TABLES
    (35) altertable -> . ALTER TABLE ID ADD attrtype
    (36) altertable -> . ALTER TABLE ID DROP non_mrelation_list
    (23) createuser -> . CREATE USER ID PASSWORD STRING
    (24) grantuser -> . GRANT power_list ON non_mrelation_list TO non_mrelation_list
    (25) revokeuser -> . REVOKE power_list ON non_mrelation_list FROM non_mrelation_list
    (44) query -> . SELECT non_mselect_clause FROM non_mrelation_list opwhere_clause
    (45) insert -> . INSERT INTO ID VALUES inservalue_list
    (48) delete -> . DELETE FROM ID opwhere_clause
    (49) update -> . UPDATE ID SET relattr EQ relattr_or_value opwhere_clause
    (43) exit -> . EXIT
    (41) print -> . PRINT ID
    (42) desc -> . DESC ID

    ;               reduce using rule 90 (nothing -> .)
    CREATE          shift and go to state 23
    DROP            shift and go to state 24
    SHOW            shift and go to state 25
    ALTER           shift and go to state 26
    GRANT           shift and go to state 27
    REVOKE          shift and go to state 28
    SELECT          shift and go to state 29
    INSERT          shift and go to state 30
    DELETE          shift and go to state 31
    UPDATE          shift and go to state 32
    EXIT            shift and go to state 33
    PRINT           shift and go to state 34
    DESC            shift and go to state 35

    start                          shift and go to state 1
    command                        shift and go to state 2
    ddl                            shift and go to state 3
    dml                            shift and go to state 4
    utility                        shift and go to state 5
    nothing                        shift and go to state 6
    createtable                    shift and go to state 7
    createindex                    shift and go to state 8
    droptable                      shift and go to state 9
    dropindex                      shift and go to state 10
    showtables                     shift and go to state 11
    altertable                     shift and go to state 12
    createuser                     shift and go to state 13
    grantuser                      shift and go to state 14
    revokeuser                     shift and go to state 15
    query                          shift and go to state 16
    insert                         shift and go to state 17
    delete                         shift and go to state 18
    update                         shift and go to state 19
    exit                           shift and go to state 20
    print                          shift and go to state 21
    desc                           shift and go to state 22

state 1

    (0) S' -> start .



state 2

    (1) start -> command . ;

    ;               shift and go to state 36


state 3

    (2) command -> ddl .

    ;               reduce using rule 2 (command -> ddl .)


state 4

    (3) command -> dml .

    ;               reduce using rule 3 (command -> dml .)


state 5

    (4) command -> utility .

    ;               reduce using rule 4 (command -> utility .)


state 6

    (5) command -> nothing .

    ;               reduce using rule 5 (command -> nothing .)


state 7

    (6) ddl -> createtable .

    ;               reduce using rule 6 (ddl -> createtable .)


state 8

    (7) ddl -> createindex .

    ;               reduce using rule 7 (ddl -> createindex .)


state 9

    (8) ddl -> droptable .

    ;               reduce using rule 8 (ddl -> droptable .)


state 10

    (9) ddl -> dropindex .

    ;               reduce using rule 9 (ddl -> dropindex .)


state 11

    (10) ddl -> showtables .

    ;               reduce using rule 10 (ddl -> showtables .)


state 12

    (11) ddl -> altertable .

    ;               reduce using rule 11 (ddl -> altertable .)


state 13

    (12) ddl -> createuser .

    ;               reduce using rule 12 (ddl -> createuser .)


state 14

    (13) ddl -> grantuser .

    ;               reduce using rule 13 (ddl -> grantuser .)


state 15

    (14) ddl -> revokeuser .

    ;               reduce using rule 14 (ddl -> revokeuser .)


state 16

    (15) dml -> query .

    ;               reduce using rule 15 (dml -> query .)


state 17

    (16) dml -> insert .

    ;               reduce using rule 16 (dml -> insert .)


state 18

    (17) dml -> delete .

    ;               reduce using rule 17 (dml -> delete .)


state 19

    (18) dml -> update .

    ;               reduce using rule 18 (dml -> update .)


state 20

    (19) utility -> exit .

    ;               reduce using rule 19 (utility -> exit .)


state 21

    (20) utility -> print .

    ;               reduce using rule 20 (utility -> print .)


state 22

    (21) utility -> desc .

    ;               reduce using rule 21 (utility -> desc .)


state 23

    (37) createtable -> CREATE . TABLE ID ( non_mattrtype_list )
    (38) createindex -> CREATE . INDEX ID ( ID )
    (23) createuser -> CREATE . USER ID PASSWORD STRING

    TABLE           shift and go to state 37
    INDEX           shift and go to state 38
    USER            shift and go to state 39


state 24

    (39) droptable -> DROP . TABLE ID
    (40) dropindex -> DROP . INDEX ID ( ID )

    TABLE           shift and go to state 40
    INDEX           shift and go to state 41


state 25

    (22) showtables -> SHOW . TABLES

    TABLES          shift and go to state 42


state 26

    (35) altertable -> ALTER . TABLE ID ADD attrtype
    (36) altertable -> ALTER . TABLE ID DROP non_mrelation_list

    TABLE           shift and go to state 43


state 27

    (24) grantuser -> GRANT . power_list ON non_mrelation_list TO non_mrelation_list
    (26) power_list -> . power_list , power_type
    (27) power_list -> . power_type
    (28) power_type -> . SELECT
    (29) power_type -> . UPDATE
    (30) power_type -> . INSERT
    (31) power_type -> . DELETE
    (32) power_type -> . PRINT
    (33) power_type -> . ALL
    (34) power_type -> . DESC

    SELECT          shift and go to state 46
    UPDATE          shift and go to state 47
    INSERT          shift and go to state 48
    DELETE          shift and go to state 49
    PRINT           shift and go to state 50
    ALL             shift and go to state 51
    DESC            shift and go to state 52

    power_list                     shift and go to state 44
    power_type                     shift and go to state 45

state 28

    (25) revokeuser -> REVOKE . power_list ON non_mrelation_list FROM non_mrelation_list
    (26) power_list -> . power_list , power_type
    (27) power_list -> . power_type
    (28) power_type -> . SELECT
    (29) power_type -> . UPDATE
    (30) power_type -> . INSERT
    (31) power_type -> . DELETE
    (32) power_type -> . PRINT
    (33) power_type -> . ALL
    (34) power_type -> . DESC

    SELECT          shift and go to state 46
    UPDATE          shift and go to state 47
    INSERT          shift and go to state 48
    DELETE          shift and go to state 49
    PRINT           shift and go to state 50
    ALL             shift and go to state 51
    DESC            shift and go to state 52

    power_list                     shift and go to state 53
    power_type                     shift and go to state 45

state 29

    (44) query -> SELECT . non_mselect_clause FROM non_mrelation_list opwhere_clause
    (57) non_mselect_clause -> . non_mrelattr_list
    (58) non_mselect_clause -> . *
    (59) non_mrelattr_list -> . relattr , non_mrelattr_list
    (60) non_mrelattr_list -> . relattr
    (61) relattr -> . ID . ID
    (62) relattr -> . ID

    *               shift and go to state 56
    ID              shift and go to state 58

    non_mselect_clause             shift and go to state 54
    non_mrelattr_list              shift and go to state 55
    relattr                        shift and go to state 57

state 30

    (45) insert -> INSERT . INTO ID VALUES inservalue_list

    INTO            shift and go to state 59


state 31

    (48) delete -> DELETE . FROM ID opwhere_clause

    FROM            shift and go to state 60


state 32

    (49) update -> UPDATE . ID SET relattr EQ relattr_or_value opwhere_clause

    ID              shift and go to state 61


state 33

    (43) exit -> EXIT .

    ;               reduce using rule 43 (exit -> EXIT .)


state 34

    (41) print -> PRINT . ID

    ID              shift and go to state 62


state 35

    (42) desc -> DESC . ID

    ID              shift and go to state 63


state 36

    (1) start -> command ; .

    $end            reduce using rule 1 (start -> command ; .)


state 37

    (37) createtable -> CREATE TABLE . ID ( non_mattrtype_list )

    ID              shift and go to state 64


state 38

    (38) createindex -> CREATE INDEX . ID ( ID )

    ID              shift and go to state 65


state 39

    (23) createuser -> CREATE USER . ID PASSWORD STRING

    ID              shift and go to state 66


state 40

    (39) droptable -> DROP TABLE . ID

    ID              shift and go to state 67


state 41

    (40) dropindex -> DROP INDEX . ID ( ID )

    ID              shift and go to state 68


state 42

    (22) showtables -> SHOW TABLES .

    ;               reduce using rule 22 (showtables -> SHOW TABLES .)


state 43

    (35) altertable -> ALTER TABLE . ID ADD attrtype
    (36) altertable -> ALTER TABLE . ID DROP non_mrelation_list

    ID              shift and go to state 69


state 44

    (24) grantuser -> GRANT power_list . ON non_mrelation_list TO non_mrelation_list
    (26) power_list -> power_list . , power_type

    ON              shift and go to state 70
    ,               shift and go to state 71


state 45

    (27) power_list -> power_type .

    ON              reduce using rule 27 (power_list -> power_type .)
    ,               reduce using rule 27 (power_list -> power_type .)


state 46

    (28) power_type -> SELECT .

    ON              reduce using rule 28 (power_type -> SELECT .)
    ,               reduce using rule 28 (power_type -> SELECT .)


state 47

    (29) power_type -> UPDATE .

    ON              reduce using rule 29 (power_type -> UPDATE .)
    ,               reduce using rule 29 (power_type -> UPDATE .)


state 48

    (30) power_type -> INSERT .

    ON              reduce using rule 30 (power_type -> INSERT .)
    ,               reduce using rule 30 (power_type -> INSERT .)


state 49

    (31) power_type -> DELETE .

    ON              reduce using rule 31 (power_type -> DELETE .)
    ,               reduce using rule 31 (power_type -> DELETE .)


state 50

    (32) power_type -> PRINT .

    ON              reduce using rule 32 (power_type -> PRINT .)
    ,               reduce using rule 32 (power_type -> PRINT .)


state 51

    (33) power_type -> ALL .

    ON              reduce using rule 33 (power_type -> ALL .)
    ,               reduce using rule 33 (power_type -> ALL .)


state 52

    (34) power_type -> DESC .

    ON              reduce using rule 34 (power_type -> DESC .)
    ,               reduce using rule 34 (power_type -> DESC .)


state 53

    (25) revokeuser -> REVOKE power_list . ON non_mrelation_list FROM non_mrelation_list
    (26) power_list -> power_list . , power_type

    ON              shift and go to state 72
    ,               shift and go to state 71


state 54

    (44) query -> SELECT non_mselect_clause . FROM non_mrelation_list opwhere_clause

    FROM            shift and go to state 73


state 55

    (57) non_mselect_clause -> non_mrelattr_list .

    FROM            reduce using rule 57 (non_mselect_clause -> non_mrelattr_list .)


state 56

    (58) non_mselect_clause -> * .

    FROM            reduce using rule 58 (non_mselect_clause -> * .)


state 57

    (59) non_mrelattr_list -> relattr . , non_mrelattr_list
    (60) non_mrelattr_list -> relattr .

    ,               shift and go to state 74
    FROM            reduce using rule 60 (non_mrelattr_list -> relattr .)


state 58

    (61) relattr -> ID . . ID
    (62) relattr -> ID .

    .               shift and go to state 75
    ,               reduce using rule 62 (relattr -> ID .)
    FROM            reduce using rule 62 (relattr -> ID .)
    EQ              reduce using rule 62 (relattr -> ID .)
    NE              reduce using rule 62 (relattr -> ID .)
    LT              reduce using rule 62 (relattr -> ID .)
    LE              reduce using rule 62 (relattr -> ID .)
    GT              reduce using rule 62 (relattr -> ID .)
    GE              reduce using rule 62 (relattr -> ID .)
    WHERE           reduce using rule 62 (relattr -> ID .)
    ;               reduce using rule 62 (relattr -> ID .)
    AND             reduce using rule 62 (relattr -> ID .)
    OR              reduce using rule 62 (relattr -> ID .)
    )               reduce using rule 62 (relattr -> ID .)


state 59

    (45) insert -> INSERT INTO . ID VALUES inservalue_list

    ID              shift and go to state 76


state 60

    (48) delete -> DELETE FROM . ID opwhere_clause

    ID              shift and go to state 77


state 61

    (49) update -> UPDATE ID . SET relattr EQ relattr_or_value opwhere_clause

    SET             shift and go to state 78


state 62

    (41) print -> PRINT ID .

    ;               reduce using rule 41 (print -> PRINT ID .)


state 63

    (42) desc -> DESC ID .

    ;               reduce using rule 42 (desc -> DESC ID .)


state 64

    (37) createtable -> CREATE TABLE ID . ( non_mattrtype_list )

    (               shift and go to state 79


state 65

    (38) createindex -> CREATE INDEX ID . ( ID )

    (               shift and go to state 80


state 66

    (23) createuser -> CREATE USER ID . PASSWORD STRING

    PASSWORD        shift and go to state 81


state 67

    (39) droptable -> DROP TABLE ID .

    ;               reduce using rule 39 (droptable -> DROP TABLE ID .)


state 68

    (40) dropindex -> DROP INDEX ID . ( ID )

    (               shift and go to state 82


state 69

    (35) altertable -> ALTER TABLE ID . ADD attrtype
    (36) altertable -> ALTER TABLE ID . DROP non_mrelation_list

    ADD             shift and go to state 83
    DROP            shift and go to state 84


state 70

    (24) grantuser -> GRANT power_list ON . non_mrelation_list TO non_mrelation_list
    (63) non_mrelation_list -> . relation , non_mrelation_list
    (64) non_mrelation_list -> . relation
    (65) relation -> . ID

    ID              shift and go to state 87

    non_mrelation_list             shift and go to state 85
    relation                       shift and go to state 86

state 71

    (26) power_list -> power_list , . power_type
    (28) power_type -> . SELECT
    (29) power_type -> . UPDATE
    (30) power_type -> . INSERT
    (31) power_type -> . DELETE
    (32) power_type -> . PRINT
    (33) power_type -> . ALL
    (34) power_type -> . DESC

    SELECT          shift and go to state 46
    UPDATE          shift and go to state 47
    INSERT          shift and go to state 48
    DELETE          shift and go to state 49
    PRINT           shift and go to state 50
    ALL             shift and go to state 51
    DESC            shift and go to state 52

    power_type                     shift and go to state 88

state 72

    (25) revokeuser -> REVOKE power_list ON . non_mrelation_list FROM non_mrelation_list
    (63) non_mrelation_list -> . relation , non_mrelation_list
    (64) non_mrelation_list -> . relation
    (65) relation -> . ID

    ID              shift and go to state 87

    non_mrelation_list             shift and go to state 89
    relation                       shift and go to state 86

state 73

    (44) query -> SELECT non_mselect_clause FROM . non_mrelation_list opwhere_clause
    (63) non_mrelation_list -> . relation , non_mrelation_list
    (64) non_mrelation_list -> . relation
    (65) relation -> . ID

    ID              shift and go to state 87

    non_mrelation_list             shift and go to state 90
    relation                       shift and go to state 86

state 74

    (59) non_mrelattr_list -> relattr , . non_mrelattr_list
    (59) non_mrelattr_list -> . relattr , non_mrelattr_list
    (60) non_mrelattr_list -> . relattr
    (61) relattr -> . ID . ID
    (62) relattr -> . ID

    ID              shift and go to state 58

    relattr                        shift and go to state 57
    non_mrelattr_list              shift and go to state 91

state 75

    (61) relattr -> ID . . ID

    ID              shift and go to state 92


state 76

    (45) insert -> INSERT INTO ID . VALUES inservalue_list

    VALUES          shift and go to state 93


state 77

    (48) delete -> DELETE FROM ID . opwhere_clause
    (66) opwhere_clause -> . WHERE non_mcond_list
    (67) opwhere_clause -> . nothing
    (90) nothing -> .

    WHERE           shift and go to state 95
    ;               reduce using rule 90 (nothing -> .)

    opwhere_clause                 shift and go to state 94
    nothing                        shift and go to state 96

state 78

    (49) update -> UPDATE ID SET . relattr EQ relattr_or_value opwhere_clause
    (61) relattr -> . ID . ID
    (62) relattr -> . ID

    ID              shift and go to state 58

    relattr                        shift and go to state 97

state 79

    (37) createtable -> CREATE TABLE ID ( . non_mattrtype_list )
    (50) non_mattrtype_list -> . attrtype , non_mattrtype_list
    (51) non_mattrtype_list -> . attrtype
    (52) attrtype -> . ID type
    (53) attrtype -> . ID type ( NUMBER )
    (54) attrtype -> . PRIMARY KEY ( ID )

    ID              shift and go to state 98
    PRIMARY         shift and go to state 101

    non_mattrtype_list             shift and go to state 99
    attrtype                       shift and go to state 100

state 80

    (38) createindex -> CREATE INDEX ID ( . ID )

    ID              shift and go to state 102


state 81

    (23) createuser -> CREATE USER ID PASSWORD . STRING

    STRING          shift and go to state 103


state 82

    (40) dropindex -> DROP INDEX ID ( . ID )

    ID              shift and go to state 104


state 83

    (35) altertable -> ALTER TABLE ID ADD . attrtype
    (52) attrtype -> . ID type
    (53) attrtype -> . ID type ( NUMBER )
    (54) attrtype -> . PRIMARY KEY ( ID )

    ID              shift and go to state 98
    PRIMARY         shift and go to state 101

    attrtype                       shift and go to state 105

state 84

    (36) altertable -> ALTER TABLE ID DROP . non_mrelation_list
    (63) non_mrelation_list -> . relation , non_mrelation_list
    (64) non_mrelation_list -> . relation
    (65) relation -> . ID

    ID              shift and go to state 87

    non_mrelation_list             shift and go to state 106
    relation                       shift and go to state 86

state 85

    (24) grantuser -> GRANT power_list ON non_mrelation_list . TO non_mrelation_list

    TO              shift and go to state 107


state 86

    (63) non_mrelation_list -> relation . , non_mrelation_list
    (64) non_mrelation_list -> relation .

    ,               shift and go to state 108
    TO              reduce using rule 64 (non_mrelation_list -> relation .)
    FROM            reduce using rule 64 (non_mrelation_list -> relation .)
    WHERE           reduce using rule 64 (non_mrelation_list -> relation .)
    ;               reduce using rule 64 (non_mrelation_list -> relation .)


state 87

    (65) relation -> ID .

    ,               reduce using rule 65 (relation -> ID .)
    TO              reduce using rule 65 (relation -> ID .)
    FROM            reduce using rule 65 (relation -> ID .)
    WHERE           reduce using rule 65 (relation -> ID .)
    ;               reduce using rule 65 (relation -> ID .)


state 88

    (26) power_list -> power_list , power_type .

    ON              reduce using rule 26 (power_list -> power_list , power_type .)
    ,               reduce using rule 26 (power_list -> power_list , power_type .)


state 89

    (25) revokeuser -> REVOKE power_list ON non_mrelation_list . FROM non_mrelation_list
